# zapip

./: .gitignore  Containerfile  Dockerfile  LICENSE  README.md  manage.py  mypy.ini  pyproject.toml  update-harbor-image.sh
zapip/: __init__.py  admin.py  apps.py  auth.py  models.py  urls.py  utils.py  views.py  zoom.py
zapip/migrations/: 0001_initial.py
zapip/tests/: test_auth.py  test_views.py  test_zoom.py
zapipsite/: urls.py  wsgi.py
zapipsite/settings/: base.py  dev.py  prod.py
